--- a/css/home.css
+++ b/css/home.css
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 
-/* NAVBAR */
+/* COMPONENTS */
 @import url('./components/navbar.css'); 
-
-/* CARDS */
 @import url('./components/card.css'); 
+@import url('./components/footer.css'); 
 
 * {
     padding: 0px; 
@@ -366,59 +365,4 @@ h2 {
 
 #contact-container button:hover {
     cursor: pointer; 
-}
-
-/* ---------- SEVENTH SECTION ---------- */
-
-#seventh-section {
-    position: relative;
-    display: flex;
-    flex-direction: row; 
-    justify-content: flex-start;
-    align-items: center;
-    height: fit-content;
-    width: 100%;
-    padding-inline: 10vw; 
-    margin-bottom: 50px;
-}
-
-#seventh-section div:first-child{
-    height: fit-content;
-    width: 100%;
-}
-
-#seventh-section img{
-    height: auto;
-    width: 80px;
-    margin-bottom: 10px;
-}
-
-
-#seventh-section address{
-    all: unset; 
-    display: block;
-    font-size: 1rem;
-    color: var(--neutral-medium)
-}
-
-#seventh-section div:nth-child(2){
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    height: 100px;
-    width: 100%;
-}
-
-#seventh-section a{
-    height: fit-content;
-    width: fit-content;
-    text-decoration: none;
-    font-size: 1rem;
-    color: var(--neutral-medium); 
-    transition: color .15s ease-in-out;
-}
-
-#seventh-section a:hover{
-    cursor: pointer; 
-    color: var(--primary)
 }
