--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,38 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-
+/* EXTEDNS */
+@import url('../style.css'); 
 
 /* COMPONENTS */
-@import url('./components/navbar.css'); 
-@import url('./components/card.css'); 
-@import url('./components/footer.css'); 
-
-* {
-    padding: 0px; 
-    margin: 0px; 
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-    font-size: 17px;
-}
-
-:root {
-    --primary: #072AC8; 
-    --primary-hover: #5473fc; 
-    --primary-tapped: #A2D6F9; 
-    --accent: #43D2FF; 
-    --neutral-dark: #292E47;
-    --neutral-medium: #6B708D; 
-    --neutral-light: #F2F4FC; 
-    --neutral-light-blue: #a7d5f6; 
-    --secondary: #FFC600;  
-    --secondary-blue: #bfcbff;  
-}
-
-body {
-    height: 100%;
-    width: 100%;
-    overflow-x: scroll;
-    background-color: var(--neutral-light);
-}
+@import url('../components/card.css'); 
+@import url('../components/footer.css'); 
 
 /* ---------- FIRST SECTION ---------- */
 
@@ -44,7 +15,6 @@ body {
     align-items: flex-start;
     height: fit-content;
     width: 100%;
-    padding-top: 90px;
     padding-bottom: 30px; 
     padding-inline: 7vw; 
 }
@@ -100,7 +70,7 @@ h1 {
 
 #first-section img {
     position: absolute;
-    top: 90px; 
+    top: 0px; 
     right: 70px; 
     height: auto;
     width: 600px;
@@ -174,7 +144,7 @@ h2 {
     width: 100%;
     background-color: var(--neutral-dark);
     padding: 100px; 
-    background-image: url('../assets/testimonials/orbit.png');
+    background-image: url('../../assets/testimonials/orbit.png');
     background-position: center;
     background-size: 100% auto;
 }
@@ -331,7 +301,7 @@ h2 {
     color: var(--neutral-dark); 
     border: none; 
     outline: none; 
-    background-image: url('../assets/icon/mail.svg');
+    background-image: url('../../assets/icon/mail.svg');
     background-repeat: no-repeat;
     background-position: 20px center;
     margin-right: 10px; 
