--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+
+/* COMPONENTS */
+@import url('./components/card.css'); 
+@import url('./components/footer.css'); 
+
+* {
+    padding: 0px; 
+    margin: 0px; 
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    font-size: 17px;
+}
+
+:root {
+    --primary: #072AC8; 
+    --primary-hover: #5473fc; 
+    --primary-tapped: #A2D6F9; 
+    --accent: #43D2FF; 
+    --neutral-dark: #292E47;
+    --neutral-medium: #6B708D; 
+    --neutral-light: #F2F4FC; 
+    --neutral-light-blue: #a7d5f6; 
+    --secondary: #FFC600;  
+    --secondary-blue: #bfcbff;  
+}
+
+body {
+    height: 100%;
+    width: 100%;
+    overflow-x: scroll;
+    background-color: var(--neutral-light);
+    padding-top: 90px;
+}
 
 /* -------------- HEADER --------------- */
 
@@ -39,7 +74,7 @@ ul {
     width: fit-content;
 }
 
-li a {
+li {
     text-decoration: unset;
     padding-inline: 15px;
     font-weight: 500;
