--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -60,7 +60,7 @@ h1 {
     border: none; 
     color: var(--neutral-medium); 
     background-color: transparent;
-    transition: all .2s ease-in-out;
+    transition: background-color .2s ease-in-out, color .2s ease-in-out;
 }
 
 #first-section button:hover {
