--- a/css/components/card.css
+++ b/css/components/card.css
@@ -16,7 +16,7 @@
     box-shadow: 0px 10px 50px rgb(0, 0, 0, .25);
     background-color: #fff;
     transition: all .15s ease-in-out;
-    margin-bottom: 200px; 
+    margin-bottom: 200px;
 }
 
 .card:hover {
@@ -48,3 +48,16 @@
     cursor: pointer; 
 }
 
+@media (max-width: 600px) {
+    #cards-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-gap: 0px;
+        overflow: visible;
+    }
+
+    .card {
+        box-shadow: 0px 0px 20px rgb(0, 0, 0, .25);
+        margin-bottom: 50px;
+    }
+}
