--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -4,11 +4,11 @@ footer {
     position: relative;
     display: flex;
     flex-direction: row; 
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     height: fit-content;
     width: 100%;
-    padding-inline: 10vw; 
+    padding-inline: 7vw; 
     margin-bottom: 50px;
 }
 
@@ -35,6 +35,7 @@ footer div:nth-child(2){
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    justify-content: flex-end;
     height: 100px;
     width: 100%;
 }
@@ -51,4 +52,24 @@ footer a{
 footer a:hover{
     cursor: pointer; 
     color: var(--primary)
+}
+
+@media (max-width: 600px){
+    footer {
+        align-items: flex-start;
+    }
+    
+    footer div:nth-child(2){
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-row-gap: 10px;
+        height: fit-content;
+        width: 100%;
+    }
+
+    footer a{
+        width: 100%;
+        text-align: end;
+    }
 }
