--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,4 +1,4 @@
-/* EXTEDNS */
+/* EXTENDS */
 @import url('../style.css'); 
 
 /* COMPONENTS */
@@ -78,6 +78,22 @@ h1 {
     z-index: -1;
 }
 
+@media (max-width: 600px) {
+    #first-section {
+        align-items: center;
+        text-align: center;
+    }
+
+    h1 {
+        margin-top: 50px;
+        font-size: 2.5rem;
+    }
+
+    #first-section img {
+        display: none;
+    }
+}
+
 /* ---------- SECOND SECTION ---------- */
 
 #second-section {
@@ -90,6 +106,7 @@ h1 {
     padding-inline: 7vw; 
     margin-top: 250px; 
     margin-bottom: 150px;
+    overflow-x: hidden;
 }
 
 #second-section img {
@@ -102,6 +119,40 @@ h1 {
 #second-section img:hover {
     filter: grayscale(0%);
     cursor: pointer;
+}
+
+@media (max-width: 600px) {
+
+    #second-section {
+        width: 100%;
+        margin-top: 100px; 
+        padding: 0px;
+        justify-content: flex-start; 
+        animation: carrusel 50s infinite;
+        overflow-x: hidden;
+    }
+
+    #second-section img {
+        filter: grayscale(0%);
+    }
+
+    @keyframes carrusel {
+        0% {
+            transform: translateX(-70%);
+        } 
+        50% {
+            transform: translateX(5%);
+        }
+        100% {
+            transform: translateX(-70%);
+        }
+    }
+
+    #second-section img {
+        height: 50px;
+        width: auto; 
+        margin-inline: 20px; 
+    }
 }
 
 /* ---------- THIRD SECTION ---------- */
@@ -231,6 +282,51 @@ h2 {
     right: 50px; 
 }
 
+@media (max-width: 600px) {
+    #fourth-section {
+        padding-inline: 7vw;
+        margin-bottom: 70px;
+    }
+
+    #quote-container {
+        padding: 50px; 
+        background-image: url('../../assets/testimonials/orbit.png');
+        background-position: center;
+        background-size: 100% auto;
+        margin-top: 50px;
+    }
+
+    #quote-container h3 {
+        display: none; 
+    }
+
+    #quote-container q {
+        font-size: 1.3rem;
+        margin: 0px; 
+    }
+
+    #profile-container {
+       order: -1;
+       margin-bottom: 30px;
+    }
+    
+    .memoji-one {
+        display: none;
+    }
+
+    .memoji-two {
+        display: none;
+    }
+
+    .memoji-three {
+        display: none;
+    }
+
+    .memoji-four {
+        display: none;
+    }
+}
+
 /* ---------- FIFTH SECTION ---------- */
 
 #fifth-section {
@@ -336,4 +432,24 @@ h2 {
 
 #contact-container button:hover {
     cursor: pointer; 
+}
+
+@media (max-width: 600px) {
+    #sixth-section {
+        padding-inline: 7vw; 
+        margin-bottom: 70px;
+    }
+
+    #contact-container {
+        justify-content: center;
+        padding: 30px; 
+        text-align: center;
+    }
+
+    #contact-container input {
+        border-radius: 0px;
+        height: 60px;
+        width: 100%;
+        margin-bottom: 20px; 
+    }
 }
