⚡ Routes Options: Now an array of functions is executed on route focus

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -217,6 +217,10 @@ h1 {
     #first-section img {
         display: none;
     }
+
+    #card-container {
+        display: none;
+    }
 }
 
 /* ---------- SECOND SECTION ---------- */
