--- a/css/components/card.css
+++ b/css/components/card.css
@@ -3,6 +3,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     grid-gap: 50px;
+    margin-bottom: 150px;
 }
 
 .card {
@@ -16,11 +17,11 @@
     box-shadow: 0px 10px 50px rgb(0, 0, 0, .25);
     background-color: #fff;
     transition: all .15s ease-in-out;
-    margin-bottom: 200px;
 }
 
 .card:hover {
     margin-top: -15px;
+    cursor: pointer;
 }
 
 .card .text-container {
@@ -53,11 +54,11 @@
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr;
         grid-gap: 0px;
+        grid-row-gap: 50px;
         overflow: visible;
     }
 
     .card {
         box-shadow: 0px 0px 20px rgb(0, 0, 0, .25);
-        margin-bottom: 50px;
     }
 }
