--- a/css/pages/_project.css
+++ b/css/pages/_project.css
@@ -56,6 +56,8 @@ h1 {
     height: auto;
     width: 100%;
     margin-bottom: 35px;
+    box-shadow: 0px 0px 50px rgba(157, 0, 239, .33);
+    pointer-events: none;
 }
 
 #content {
