✨Contact page: Now it´s available contact page ui

--- a/css/pages/contact.css
+++ b/css/pages/contact.css
@@ -1,5 +1,110 @@
+/* EXTENDS */
 @import url('../style.css'); 
 
-h1 {
-    color: red; 
+* {
+    border: none; 
+    outline: none; 
+}
+
+#form-section {
+    margin-block: 70px; 
+    height: fit-content;
+    width: 100%;
+    padding-inline: 7vw;
+}
+
+#form-section h1 {
+    font-size: 2.5rem;
+    color: var(--neutral-dark); 
+}
+
+/* ---------- FORM CONTAINERS ---------- */
+
+form {
+    display: grid; 
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr fit-content 1fr;
+    row-gap: 20px;
+    column-gap: 20px;
+    margin-top: 50px;
+}
+
+fieldset {
+    height: fit-content;
+    width: 100%;
+}
+
+#fullname {
+    grid-column: 1 / span 2;
+    grid-row: 1; 
+}
+
+#fullname p::after {
+    content: '*';
+    margin-bottom: 5px;
+    margin-left: 5px;
+}
+
+#row-fields {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    column-gap: 40px;
+    grid-column: 1 / span 2;
+    grid-row: 2;
+}
+
+#message {
+    grid-column: 1 / span 2;
+    grid-row: 3; 
+}
+
+button {
+    grid-column: 1 / span 2;
+    grid-row: 4; 
+    height: 70px;
+    margin-top: 20px; 
+    background-color: var(--primary);
+    color: #fff; 
+    font-size: 1.2rem;
+    transition: scale .15s ease-in-out;
+}
+
+button:hover {
+    scale: .98;
+    cursor: pointer; 
+}
+
+/* ---------- FORM CONTENT ---------- */
+
+fieldset p {
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--neutral-medium); 
+    margin-bottom: 10px; 
+}
+
+/* placeholder color */
+::placeholder, :-moz-placeholder, ::-webkit-input-placeholder {
+    font-weight: 400;
+    color: var(--neutral-medium); 
+    opacity: .5; 
+}
+
+fieldset input, fieldset textarea {
+    padding: 15px; 
+    height: 60px;
+    width: 100%;
+    background-color: #E3E6F0;
+    transition: box-shadow .10s ease-in-out;
+}
+
+fieldset textarea {
+    height: 200px;
+    resize: none;
+}
+
+fieldset input:focus, fieldset textarea:focus {
+    box-shadow: inset 0px 0px 0px 2px var(--primary);
+    color: var(--primary); 
 }
